<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>cn.zorcc</groupId>
  <artifactId>tenet</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <modules>
    <module>common</module>
    <module>log</module>
    <module>orm</module>
    <module>app</module>
    <module>mint</module>
    <module>gateway</module>
    <module>metrics</module>
    <module>storage</module>
    <module>http</module>
  </modules>
  <packaging>pom</packaging>
  <name>tenet</name>
  <url>http://cn.zorcc</url>
  <description>A simple, fast, easy, lightweight library to build distributed microservice system</description>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>benrush</name>
      <email>15271845019@163.com</email>
    </developer>
  </developers>

  <repositories>

  </repositories>

  <properties>
    <project.version>0.0.1</project.version>
    <java.version>20</java.version>
    <resource.delimiter>@</resource.delimiter>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
    <maven-surefile-plugin.version>3.0.0-M8</maven-surefile-plugin.version>

    <lombok.version>1.18.24</lombok.version>
    <slf4j.version>2.0.6</slf4j.version>
    <netty.version>4.1.86.Final</netty.version>
    <jctools.version>4.0.1</jctools.version>
    <jackson.version>2.14.1</jackson.version>
    <kryo.version>5.3.0</kryo.version>
    <jmh.version>1.36</jmh.version>
    <junit.version>5.9.2</junit.version>
    <rocksdb.version>7.6.0</rocksdb.version>
    <nimbus-jose-jwt.version>9.25.6</nimbus-jose-jwt.version>
    <oshi.version>6.3.1</oshi.version>
    <questdb.version>6.6.1</questdb.version>
  </properties>

  <!-- 通用项目管理依赖 -->
  <dependencies>
    <!-- lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>

    <!-- junit  -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <!--  jmh   -->
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-core</artifactId>
      <version>${jmh.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-generator-annprocess</artifactId>
      <version>${jmh.version}</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <encoding>${maven.compiler.encoding}</encoding>
          <verbose>true</verbose>
          <parameters>true</parameters> <!-- adding -parameter so that java reflection could see the parameter names -->
          <compilerArgs>
            <arg>-Xlint</arg>
            <arg>--enable-preview</arg> <!-- enable virtual threads and ffi-->
          </compilerArgs>
          <source>20</source>
          <target>20</target>
          <release>${java.version}</release>
          <meminitial>256m</meminitial>
          <maxmem>1024m</maxmem>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefile-plugin.version}</version>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>
    </plugins>
  </build>


</project>
